--- a/Phase_2_Conf_Mgt_Ansible/roles/frontend/main.yml
+++ b/Phase_2_Conf_Mgt_Ansible/roles/frontend/main.yml
@@ -1,15 +1,28 @@
-- name: frontend playbook
-- hosts: all
-- become: true
-- tasks:
-    - name: Install nginx
-      ansible.builtin.dnf:
-        name: nginx
-        state: latest
-    - name: copy the nginx conf file
-      ansible.builtin.copy:
-        src: frontend.service
-        dest: /etc/nginx/nginx.conf
-    - name: delete old nginx html file
-      ansible.builtin.shell:
-        cmd: rm -rf /usr/share/nginx/html/*; curl -o /tmp/frontend.zip https://roboshop-artifacts.s3.amazonaws.com/frontend-v3.zip;
+#
+#
+#
+#
+#rm -rf /usr/share/nginx/html/*
+
+#curl -o /tmp/frontend.zip https://roboshop-artifacts.s3.amazonaws.com/frontend-v3.zip
+#cd /usr/share/nginx/html
+#unzip /tmp/frontend.zip
+#ystemctl enable nginx
+#systemctl restart nginx
+- name: disable nginx
+  ansible.builtin.shell: dnf module disable nginx -y
+- name: enable nginx
+  ansible.builtin.shell: dnf module enable nginx:1.24 -y
+- name: Install nginx
+  ansible.builtin.dnf:
+    name: nginx
+    state: installed
+
+- name: copy the nginx conf file
+  ansible.builtin.copy:
+    src: frontend.service
+    dest: /etc/nginx/nginx.conf
+- name: delete old nginx html file
+  ansible.builtin.file:
+    path: /usr/share/nginx/html/*
+    state: absent
