--- a/Phase_2_Conf_Mgt_Ansible/roles/frontend/main.yml
+++ b/Phase_2_Conf_Mgt_Ansible/roles/frontend/main.yml
@@ -1,18 +1,9 @@
-#
-#
-#
-#
-#rm -rf /usr/share/nginx/html/*
-
-#curl -o /tmp/frontend.zip https://roboshop-artifacts.s3.amazonaws.com/frontend-v3.zip
-#cd /usr/share/nginx/html
-#unzip /tmp/frontend.zip
-#ystemctl enable nginx
-#systemctl restart nginx
 - name: disable nginx
   ansible.builtin.shell: dnf module disable nginx -y
+
 - name: enable nginx
   ansible.builtin.shell: dnf module enable nginx:1.24 -y
+
 - name: Install nginx
   ansible.builtin.dnf:
     name: nginx
@@ -22,7 +13,20 @@
   ansible.builtin.copy:
     src: frontend.service
     dest: /etc/nginx/nginx.conf
+
 - name: delete old nginx html file
   ansible.builtin.file:
-    path: /usr/share/nginx/html/*
+    path: /usr/share/nginx/html/
     state: absent
+
+- name: Unarchive a file
+  ansible.builtin.unarchive:
+    src: https://roboshop-artifacts.s3.amazonaws.com/frontend-v3.zip
+    dest: /usr/share/nginx/html/
+    remote_src: yes
+
+- name: Restart nginx
+  ansible.builtin.systemd_service:
+    name: nginx
+    state: restarted
+    enabled: yes
