--- a/Phase_2_Conf_Mgt_Ansible/Makefile
+++ b/Phase_2_Conf_Mgt_Ansible/Makefile
@@ -1,3 +1,3 @@
 default:
 	git pull
-	ansible-playbook -i frontend-dev.sdevops.shop -e ansible_user=ec2-user -e ansible_password=DevOps321 roboshop.yml -e role=frontend
+	ansible-playbook -i $(role)-dev.sdevops.shop -e ansible_user=ec2-user -e ansible_password=DevOps321 roboshop.yml -e role=$(role)
