--- a/Phase_2_Conf_Mgt_Ansible/roles/common/tasks/app_prereq.yml
+++ b/Phase_2_Conf_Mgt_Ansible/roles/common/tasks/app_prereq.yml
@@ -5,7 +5,7 @@
 - name: copy config file
   ansible.builtin.copy:
     src: "{{component}}.service"
-    dest: /etc/systemd/system/${component}.service
+    dest: "/etc/systemd/system/{{component}}.service"
 
 - name: remove app directory
   ansible.builtin.file:
