corrected the syntax

--- a/Phase_2_Conf_Mgt_Ansible/roles/common/tasks/maven.yml
+++ b/Phase_2_Conf_Mgt_Ansible/roles/common/tasks/maven.yml
@@ -11,6 +11,8 @@
 - name: install dependencies
   ansible.builtin.shell:
     cmd: mvn clean package; mv "target/{{component}}-1.0.jar {{component}}.jar"
+  args:
+    chdir: /app
 
 - name: install mysql
   ansible.builtin.dnf:
