--- a/Phase_2_Conf_Mgt_Ansible/roles/common/tasks/maven.yml
+++ b/Phase_2_Conf_Mgt_Ansible/roles/common/tasks/maven.yml
@@ -19,11 +19,11 @@
     state: installed
 
 - name: connect schema from the hosts
-  ansible.builtin.shell: mysql -h mysql-dev.sdevops.shop -uroot -p$1 < /app/db/schema.sql
+  ansible.builtin.shell: mysql -h mysql-dev.sdevops.shop -uroot -p{{password}} < /app/db/schema.sql
 - name: connect schema from the hosts
-  ansible.builtin.shell: mysql -h mysql-dev.sdevops.shop -uroot -p$1 < /app/db/app-user.sql
+  ansible.builtin.shell: mysql -h mysql-dev.sdevops.shop -uroot -p{{password}} < /app/db/app-user.sql
 - name: connect schema from the hosts
-  ansible.builtin.shell: mysql -h mysql-dev.sdevops.shop -uroot -p$1 < /app/db/master-data.sql
+  ansible.builtin.shell: mysql -h mysql-dev.sdevops.shop -uroot -p{{password}} < /app/db/master-data.sql
 
 - name: import systemd from common role
   ansible.builtin.import_role:
