--- a/Phase_2_Conf_Mgt_Ansible/roles/shipping/tasks/main.yml
+++ b/Phase_2_Conf_Mgt_Ansible/roles/shipping/tasks/main.yml
@@ -1,4 +1,4 @@
 - name: import maven from common role
   ansible.builtin.import_role:
     name: common
-    tasks_from: maven.yml RoboShop@1
+    tasks_from: maven.yml
