--- a/Phase_2_Conf_Mgt_Ansible/roles/dispatch/tasks/main.yml
+++ b/Phase_2_Conf_Mgt_Ansible/roles/dispatch/tasks/main.yml
@@ -9,7 +9,13 @@
     tasks_from: app_prereq.yml
 
 - name: init and build golang
-  ansible.builtin.shell: go mod init dispatch; go get ; go build
+  ansible.builtin.shell: go mod init dispatch;
+
+- name: init and build golang
+  ansible.builtin.shell: go get;
+
+- name: init and build golang
+  ansible.builtin.shell: go build
 
 - name: import systemd
   ansible.builtin.import_role:
