--- a/Phase_3_Terraform/Makefile
+++ b/Phase_3_Terraform/Makefile
@@ -3,7 +3,7 @@ dev-init:
 	terraform init
 dev-plan:
 	terraform init
-	terraform plan -auto-approve -var-file="./environments/dev/main.tfvars"
+	terraform plan -var-file="./environments/dev/main.tfvars"
 dev-apply:
 	terraform init
 	terraform apply -auto-approve -var-file="./environments/dev/main.tfvars"
@@ -16,7 +16,7 @@ prod-init:
 	terraform init
 prod-plan:
 	terraform init
-	terraform plan -auto-approve -var-file="./environments/prod/main.tfvars"
+	terraform plan -var-file="./environments/prod/main.tfvars"
 prod-apply:
 	terraform init
 	terraform apply -auto-approve -var-file="./environments/prod/main.tfvars"
